[project]
name = "image-gen"
version = "0.1.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    "accelerate>=1.12.0",
    "datasets==2.16.0",
    "diffusers>=0.36.0",
    "peft>=0.18.1",
    "torch",
    "torchvision",
    "transformers>=5.0.0",
]

[dependency-groups]
dev = ["ipykernel>=7.1.0"]

[tool.uv.sources]
torch = { index = "pytorch-cuda" }
torchvision = { index = "pytorch-cuda" }

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
